--- a/index.html/index.html
+++ b/index.html/index.html
@@ -43,8 +43,54 @@
   </div>
   <div class="date">
     <div class="date-text">
-      <p>News</p>
+      <p class="wrap">News</p>
       <h2>新着情報</h2>
+      <ul class="date-title">
+        <li class="date-list1">2021/01/01<a class="item1" href="#">ニュース</a><span class="tag1">COACHTECHのサービスが開始されました。</span></li>
+        <li class="date-list2">2021/01/01<a class="item2" href="#">ニュース</a><span class="tag2">COACHTECHのサービスが開始されました。</span></li>
+        <li class="date-list3">2021/01/01<a class="item3" href="#">ニュース</a><span class="tag3">COACHTECHのサービスが開始されました。</span></li>
+        <li class="date-list4">2021/01/01<a class="item4" href="#">ニュース</a><span class="tag4">COACHTECHのサービスが開始されました。</span></li>
+        <li class="date-list5">2021/01/01<a class="item5" href="#">ニュース</a><span class="tag5">COACHTECHのサービスが開始されました。</span></li>
+      </ul>
+      <div class="bottom"></div>
+    </div>
+  </div>
+  <div class="message">
+    <div class="message-text">
+      <p>About</p>
+      <h2>Technology × Coaching</h2>
+    </div>
+    <div class="message-title">
+      <div class="message-list">
+        <p class="message-list1">株式会社estraはデジタル化が遅れている教育業界に<br>最新のテクノロジーを導入することによって教育の<br>DXを実現します。</p>
+        <p class="message-list2">独自のオペレーションとコーチングを融合した新しい<br>教育の仕組みにより、一人ひとりに合わせた最適な教<br>育を提供します。</p>
+      </div>
+      <div class="message-img">
+        <img src="../img/about.jpg" alt="画像3">
+      </div>
+    </div>
+  </div>
+  <div class="service">
+    <div class="service-text">
+      <p>Service</p>
+      <h2>サービス内容</h2>
+    </div>
+    <div class="service-list">
+      <div class="service-item1">
+        <img src="../img/service__first.svg" alt="画像4">
+        <h3>教育事業</h3>
+        <p>サンプルテキストがここには入ります。サンプルテキストがここには入ります。サンプルテキストがここには入ります。</p>
+      </div>
+      <div class="service-item2">
+        <img src="../img/service__first.svg" alt="画像5">
+        <h3>教育事業</h3>
+        <p>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。</p>
+      </div>
+      <div class="service-item3">
+        <img src="../img/service__first.svg" alt="画像6">
+        <h3>教育事業</h3>
+        <p>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。</p>
+      </div>
     </div>
   </div>
 </body>
