--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>COACHTECH</title>
-  <link rel="stylesheet" href="../css/reset.css">
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
@@ -16,7 +16,7 @@
 <body>
   <header class="header">
     <header class="header-left">
-      <img src="../img/estra_logo.png" alt="画像">
+      <img src="./img/estra_logo.png" alt="画像">
     </header>
     <ul class="list">
       <li class="list1">News</li>
@@ -29,7 +29,7 @@
   </header>
   <div class="content">
     <div class="content-img">
-      <img src="../img/firstview.jpg" alt="画像2">
+      <img src="./img/firstview.jpg" alt="画像2">
     </div>
     <h1 class="title">
       Commit to the <span>growth</span><br>for everyone
@@ -66,7 +66,7 @@
         <p class="message-list2">独自のオペレーションとコーチングを融合した新しい<br>教育の仕組みにより、一人ひとりに合わせた最適な教<br>育を提供します。</p>
       </div>
       <div class="message-img">
-        <img src="../img/about.jpg" alt="画像3">
+        <img src="./img/about.jpg" alt="画像3">
       </div>
     </div>
   </div>
@@ -77,21 +77,95 @@
     </div>
     <div class="service-list">
       <div class="service-item1">
-        <img src="../img/service__first.svg" alt="画像4">
+        <img src="./img/service__first.svg" alt="画像4">
         <h3>教育事業</h3>
         <p>サンプルテキストがここには入ります。サンプルテキストがここには入ります。サンプルテキストがここには入ります。</p>
       </div>
       <div class="service-item2">
-        <img src="../img/service__first.svg" alt="画像5">
+        <img src="./img/service__first.svg" alt="画像5">
         <h3>教育事業</h3>
         <p>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。</p>
       </div>
       <div class="service-item3">
-        <img src="../img/service__first.svg" alt="画像6">
+        <img src="./img/service__first.svg" alt="画像6">
         <h3>教育事業</h3>
         <p>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。<br>サンプルテキストがここには入ります。</p>
       </div>
     </div>
+  </div>
+  <div class="blog">
+    <div class="blog-text">
+      <p>Blog</p>
+      <h2>ブログ</h2>
+    </div>
+    <div class="card">
+      <div class="card1">
+        <p class="text1">
+          Blog
+        </p>
+        <img src="./img/blog__first.jpg" alt="画像7">
+        <h3>プログラミング学習の勉強方法を<br>特集。挫折しない秘訣とは？</h3>
+        <div class="card1-item">
+          <p class="card1-item1">2021/01/01</p>
+          <p class="card1-item2">#COACHTECH</p>
+        </div>
+      </div>
+      <div class="card1">
+        <p class="text1">
+          Blog
+        </p>
+        <img src="./img/blog__first.jpg" alt="画像7">
+        <h3>プログラミング学習の勉強方法を<br>特集。挫折しない秘訣とは？</h3>
+        <div class="card1-item">
+          <p class="card1-item1">2021/01/01</p>
+          <p class="card1-item2">#COACHTECH</p>
+        </div>
+      </div>
+      <div class="card1">
+        <p class="text1">
+          Blog
+        </p>
+        <img src="./img/blog__first.jpg" alt="画像7">
+        <h3>プログラミング学習の勉強方法を<br>特集。挫折しない秘訣とは？</h3>
+        <div class="card1-item">
+          <p class="card1-item1">2021/01/01</p>
+          <p class="card1-item2">#COACHTECH</p>
+        </div>
+      </div>
+    </div>
+    <a href="#" class="btn">一覧ページへ</a>
+  </div>
+  <div class="company">
+    <div class="company-text">
+      <p>Company</p>
+      <h2>会社概要</h2>
+    </div>
+    <table class="table" border="1">
+      <tr>
+        <th>会社名</th>
+        <td>株式会社estra</td>
+      </tr>
+      <tr>
+        <th>代表者名</th>
+        <td>福場凛太郎</td>
+      </tr>
+      <tr>
+        <th>本社所在地</th>
+        <td>東京都渋谷区1-1-1</td>
+      </tr>
+      <tr>
+        <th>従業員数</th>
+        <td>100名</td>
+      </tr>
+      <tr>
+        <th>電話番号</th>
+        <td>0120-00-0000</td>
+      </tr>
+      <tr>
+        <th>資本金</th>
+        <td>￥10000000</td>
+      </tr>
+    </table>
   </div>
 </body>
 </html>
