--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <p>Company</p>
       <h2>会社概要</h2>
     </div>
-    <table class="table" border="1">
+    <table class="table">
       <tr>
         <th>会社名</th>
         <td>株式会社estra</td>
@@ -167,5 +167,23 @@
       </tr>
     </table>
   </div>
+  <div class="photo">
+    <div class="photo1">
+      <img src="./img/recruit.png" alt="画像8" class="photo-list1">
+      <h2>採用情報</h2>
+    </div>
+    <div class="photo2">
+      <img src="./img/interview.png" alt="画像9" class="photo-list2">
+      <h2>社員インタビュー</h2>
+    </div>
+  </div>
+  <footer>
+    <p>株式会社estraへのお問い合わせはこちらから</p>
+    <span class="spans"></span>
+    <a href="#" class="btn1">お問い合わせ</a>
+  </footer>
+  <small>
+    Copyright &copy; estra,inc All Rights Reserved.
+  </small>
 </body>
 </html>
